--- a/views/api/index.pug
+++ b/views/api/index.pug
@@ -7,25 +7,12 @@ html(lang="en")
     body
         h1 AirChat
         h2 Documentation
-        p To be updated soon.
-
-        h3 Organization
-
         ul
             li
-                a(href="/api/organization/create") "/api/organization/create" - POST - Organization create
+                a(href="/api/docs/routes") Routes
 
             li
-                a(href="/api/organizations") "/api/organizations" - GET - Organization list
+                a(href="/api/docs/models") Models
+                
 
-            li
-                a(href="/api/organization/:id") "/api/organization/:id" - GET - Details of organization 'id'
-
-            li
-                a(href="/api/organizations/:id/members") "/api/organizations/:id/members" - GET - Organization members list for organization 'id'
             
-            li
-                a(href="/api/organization/:id/delete", style="color:red") "/api/organization/:id/delete" - POST - Delete organization 'id'
-
-            li
-                a(href="/api/organizations/delete/all", style="color:red") "/api/organizations/delete/all" - GET - Delete All organizations
