Added user model documentation

--- a/views/api/docs/models.pug
+++ b/views/api/docs/models.pug
@@ -9,5 +9,15 @@ html(lang="en")
         h2 Documentation
         h3 Models
         
+        h4 User
+        p File: user.js
+        p Schema: User
+        p Properties: 
+        ul 
+            li name: String
+            li username: String
+            li password: String
+            li position: String
+            li organization: ObjectId(Organization)
 
         
