seperated docs index

--- a/views/api/docs/index.pug
+++ b/views/api/docs/index.pug
@@ -6,5 +6,13 @@ html(lang="en")
         title AirChat
     body
         h1 AirChat
-    
-        p Please visit #[a(href="/api/docs") API Documentation]
+        h2 Documentation
+        ul
+            li
+                a(href="/api/docs/routes") Routes
+
+            li
+                a(href="/api/docs/models") Models
+                
+
+            
