--- a/views/app/index.pug
+++ b/views/app/index.pug
@@ -5,7 +5,12 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title AirChat
     body
-        h1 AirChat
+        h1 AirChat 
+
+        p
+            a(href="/api/docs") API Documentation
+
+            
         p Available routes:
         ul
             li Organization
@@ -42,5 +47,4 @@ html(lang="en")
                         a(href="/user/chat") Chat
 
                         
-        p
-            a(href="/api") API Documentation
+        
