materialize and some formatting

--- a/views/api/docs/models.pug
+++ b/views/api/docs/models.pug
@@ -1,19 +1,14 @@
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title AirChat
-    body
-        h1 AirChat
-        h2 Documentation
+extends components/layout
+
+block content
+    .container
         h3 Models
         
         h4 User
         p File: user.js
         p Schema: User
         p Properties: 
-        ul 
+        ul.browser-default 
             li name: String
             li username: String
             li password: String
@@ -24,13 +19,13 @@ html(lang="en")
         p File: organization.js
         p Schema: Organization
         p Properties: 
-        ul 
+        ul.browser-default 
             li name: String
             li location: 
-                ul
+                ul.browser-default
                     li name: String
                     li geo: 
-                        ul
+                        ul.browser-default
                             li lat: Number
                             li long: Number
             li parent: ObjectId(Organization)                
