--- a/views/api/docs/components/layout.pug
+++ b/views/api/docs/components/layout.pug
@@ -16,11 +16,8 @@ html(lang="en")
                 h1.blue-grey-text.text-lighten-5 AirChat
         section
             .container
-                h2 404
-                p Resource you're looking for does not exist.
-                p Please visit #[a(href="/api/docs") API Documentation]
+                h2 Documentation
+        block content
 
         script(src="/js/lib/materialize.min.js")
         script(src="/js/init.js")
-    
-        
