--- a/views/api/docs/index.pug
+++ b/views/api/docs/index.pug
@@ -1,18 +1,10 @@
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title AirChat
-    body
-        h1 AirChat
-        h2 Documentation
-        ul
+extends components/layout
+
+block content
+    .container
+        ul.browser-default
             li
                 a(href="/api/docs/routes") Routes
 
             li
                 a(href="/api/docs/models") Models
-                
-
-            
