--- a/views/api/index.pug
+++ b/views/api/index.pug
@@ -1,10 +1,24 @@
+doctype html
 html(lang="en")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         title AirChat
+
+        link(rel="stylesheet", href="/css/lib/materialize.min.css")
+        link(rel="stylesheet", href="/css/lib/MaterialIcons.css")
+        link(rel="stylesheet", href="/css/lib/dayshmookh.layout.css")
+
     body
-        h1 AirChat
+        section.blue-grey.darken-3
+            .container
+                h1.blue-grey-text.text-lighten-5 AirChat
+        section
+            .container
+                p Please visit #[a(href="/api/docs") API Documentation]
+
+        script(src="/js/lib/materialize.min.js")
+        script(src="/js/init.js")
     
-        p Please visit #[a(href="/api/docs") API Documentation]
+        
