--- a/views/api/docs/models.pug
+++ b/views/api/docs/models.pug
@@ -45,3 +45,17 @@ block content
             li messages: ObjectId(Message)
 
        
+        h4 Message
+        p File: message.js
+        p Schema: Message
+        p Properties: 
+        ul 
+            li date:
+                ul
+                    li text: String
+            li user: ObjectId(User)
+            li time:
+                ul  
+                    li sent: Date
+                    li.blue-text.text-darken-2 delivered: Date
+                    li.blue-text.text-darken-2 read: Date    
