created notice model documentation

--- a/views/api/docs/models.pug
+++ b/views/api/docs/models.pug
@@ -58,4 +58,14 @@ block content
                 ul  
                     li sent: Date
                     li.blue-text.text-darken-2 delivered: Date
-                    li.blue-text.text-darken-2 read: Date    
+                    li.blue-text.text-darken-2 read: Date   
+
+        h4 Notice
+        p File: notice.js
+        p Schema: Notice
+        p Properties: 
+        ul
+            li from: ObjectId(User)
+            li title: String
+            li body: String
+            li date: Date              
