--- a/views/api/docs/models.pug
+++ b/views/api/docs/models.pug
@@ -38,10 +38,10 @@ block content
         p Properties: 
         ul.browser-default 
             li name: String
-            li admins: ObjectId(User)
-            li users: ObjectId(User)
+            li admins: [ObjectId(User)]
+            li users: [ObjectId(User)]
             li creator: ObjectId(User)
-            li messages: ObjectId(Message)
+            li messages: [ObjectId(Message)]
 
         h4 Message
         p File: message.js
@@ -55,8 +55,8 @@ block content
             li time:
                 ul.browser-default  
                     li sent: Date
-                    li.blue-text.text-darken-2 delivered: Date
-                    li.blue-text.text-darken-2 read: Date   
+                    li.blue-text.text-lighten-2 delivered: Date
+                    li.blue-text.text-lighten-2 read: Date   
 
         h4 Notice
         p File: notice.js
