updated index.pug in app folder

--- a/views/app/index.pug
+++ b/views/app/index.pug
@@ -53,6 +53,12 @@ html(lang="en")
                                 a(href="/user/chats") List
                             li
                                 a(href="/user/chat") Chat
+                    li Bulletine Board
+                        ul.browser-default
+                            li
+                                a(href="/notices") List
+                            li
+                                a(href="/notices/create") Create
         
         script(src="/js/lib/materialize.min.js")
         script(src="/js/init.js")
