--- a/views/api/docs/components/layout.pug
+++ b/views/api/docs/components/layout.pug
@@ -8,6 +8,7 @@ html(lang="en")
 
         link(rel="stylesheet", href="/css/lib/materialize.min.css")
         link(rel="stylesheet", href="/css/lib/MaterialIcons.css")
+        link(rel="stylesheet", href="/css/lib/prism.css")
         link(rel="stylesheet", href="/css/lib/dayshmookh.layout.css")
 
     body
@@ -20,4 +21,5 @@ html(lang="en")
         block content
 
         script(src="/js/lib/materialize.min.js")
+        script(src="/js/lib/prism.js")
         script(src="/js/init.js")
