--- a/views/app/components/navbar.pug
+++ b/views/app/components/navbar.pug
@@ -1,21 +1,21 @@
-nav.white
+nav.blue-grey.darken-4
 	.nav-wrapper
-		a.teal-text.brand-logo(href="#!") Logo
-		a.teal-text.sidenav-trigger(href="#" data-target="mobile-demo")
+		a.brand-logo(href="#!") Airchat
+		a.sidenav-trigger(href="#" data-target="mobile-demo")
 			i.material-icons menu
-		ul.right.hide-on-med-and-down
+		//- ul.right.hide-on-med-and-down
 			li
-				a.teal-text(href="home.html") Home
+				a(href="home.html") Home
 			li
-				a.teal-text(href="badges.html") Chats
+				a(href="badges.html") Chats
 			li
-				a.teal-text(href="collapsible.html") Directory
+				a(href="collapsible.html") Directory
 			li
-				a.teal-text(href="mobile.html") Settings
+				a(href="mobile.html") Settings
 			
 
 
-ul#mobile-demo.sidenav
+//- ul#mobile-demo.sidenav
 	li
 		a(href="home.html") Home
 	li
