--- a/views/app/index.pug
+++ b/views/app/index.pug
@@ -24,7 +24,7 @@ html(lang="en")
                     li Organization
                         ul.browser-default
                             li
-                                a(href="/organization") /organization - List
+                                a(href="/organizations") /organizations - List
                             li
                                 a(href="/organization/create") /organization/create - Create
                             li
