--- a/views/app/organization/index.pug
+++ b/views/app/organization/index.pug
@@ -1,22 +1,16 @@
 extend ../components/layout.pug
 
 block styles
-    link(href='https://fonts.googleapis.com/css?family=Lato', rel='stylesheet')
-    link(rel="stylesheet", href="/css/organization.css")
 
 block title
     title Organizations | AirChat
 
 block content
 
-    ul.collapsible
-        each organization in organizations
-            if organization.root
-                li
-                    .collapsible-header
-                        a(href="/api/organization/"+organization._id) #{organization.name} - #{organization.location.name}
-                    .collapsible-body
-                        ul
-                            each suborg in organization.suborgs
-                                li
-                                    a(href="/api/organization/"+suborg._id) #{suborg.name} - #{suborg.location.name}
+    section#organizations
+        .container
+            .collection
+                a.collection-item(v-for='organization in organizations' @click='updateOrganizations(organization._id)') {{organization.name}}
+
+block scripts
+    script(src="/js/init/organizations.js")
