--- a/views/app/index.pug
+++ b/views/app/index.pug
@@ -53,7 +53,8 @@ html(lang="en")
                                 a(href="/user/chats") List
                             li
                                 a(href="/user/chat") Chat
-                    li Bulletine Board
+
+                    li Bulletin Board
                         ul.browser-default
                             li
                                 a(href="/notices") List
