--- a/views/app/organization/index.pug
+++ b/views/app/organization/index.pug
@@ -13,4 +13,4 @@ block content
                 a.collection-item(v-for='organization in organizations' @click='updateOrganizations(organization._id)') {{organization.name}}
 
 block scripts
-    script(src="/js/init/organizations.js")
+    script(src="/js/init/organizations.index.js")
