Updated Organization routes

--- a/views/api/docs/routes.pug
+++ b/views/api/docs/routes.pug
@@ -43,3 +43,10 @@ block content
 
             li
                 a(href="/api/organizations/delete/all", style="color:red") "/api/organizations/delete/all" - GET - Delete All organizations
+
+            li  
+                a(href="/api/organization/root") "/api/organization/root"-Root of Organization
+
+            li
+                a(href="/api/organization/:id/membres") "/api/organization/id/members"-ID of organization members
+        
