--- a/views/app/components/navbar.pug
+++ b/views/app/components/navbar.pug
@@ -1,6 +1,6 @@
 nav.blue-grey.darken-4
 	.nav-wrapper
-		a.brand-logo(href="#!") Airchat
+		a.brand-logo(href="/") Airchat
 		a.sidenav-trigger(href="#" data-target="mobile-demo")
 			i.material-icons menu
 		//- ul.right.hide-on-med-and-down
