--- a/views/app/components/navbar.pug
+++ b/views/app/components/navbar.pug
@@ -1,6 +1,7 @@
-nav.blue-grey.darken-4
+nav.bg-primary
 	.nav-wrapper
-		a.brand-logo(href="/") Airchat
+		.container
+			a.brand-logo(href="/") Airchat
 		a.sidenav-trigger(href="#" data-target="mobile-demo")
 			i.material-icons menu
 		//- ul.right.hide-on-med-and-down
