--- a/views/app/organization/create.pug
+++ b/views/app/organization/create.pug
@@ -1,30 +1,32 @@
 extend ../components/layout.pug
 
 block styles
-    link(href='https://fonts.googleapis.com/css?family=Lato', rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css?family=Quicksand', rel='stylesheet')
     link(rel="stylesheet", href="/css/organization.css")
+    
+
 
 block title
     title Create Organization | AirChat
 
 block content
 
-    .row
+    .row(style="background-image:url('/images/backorg.jpg')")
         .col.s12.l4.push-l4
-            .card-panel.bg-primary
+            .card-panel.z-depth-4(style="margin-top:5%;border-radius:35px;")
                 
-                h3.light.center.fg-primary Airchat
-                h5.light.center.fg-secondary Create Organization
+                h3.light.center Airchat
+                h5.light.center Create Organization
         
                 .row
                     form.col.s12(action='/api/organization/create',method='POST')
                         .row
                             .input-field.col.s12
-                                input#name.white-border.validate(type='text', name='name')
+                                input#name.black-border.validate(type='text', name='name')
                                 label(for="name") Name                                    
 
                             .input-field.col.s12
-                                input#location.white-border.validate(type='text', name='location')
+                                input#location.black-border.validate(type='text', name='location')
                                 label(for="location") Location
 
                             p.col.s12
