--- a/views/app/user/login.pug
+++ b/views/app/user/login.pug
@@ -1,8 +1,9 @@
 extend ../components/layout.pug
 
 block styles
-    link(href='https://fonts.googleapis.com/css?family=Lato', rel='stylesheet')
+    link(href='https://fonts.googleapis.com/css?family=Quicksand', rel='stylesheet')
     link(rel="stylesheet", href="/css/organization.css")
+    
 
 block title
     title Login | AirChat
