--- a/views/app/auth/login_user.pug
+++ b/views/app/auth/login_user.pug
@@ -11,32 +11,34 @@ block content
 
 	
     .row.center
-        .col.l6.center.hide-on-small-only
+        .col.l6.m6.center.hide-on-small-only
             img(src="/images/logo.png", alt="", width="300", style="margin-top:20%")
 
-        .col.s12.l6
-            .card-panel.z-depth-4(style="margin-top:10%;border-radius:30px;")
-                
-                h3.light.center Airchat
-                h5.light.center Login User
-        
-                .row
-                    form.col.s12(action="/api/user/create", method="post")
-                        .container
-                          .row
-                              .col.s12
-                                  
-                                  .input-field.col.s12
-                                      label(for="username") Username
-                                      input#username(type="text", name="username")
+        .col.s12.l6.m6
+            .container
+                .card-panel.z-depth-4(style="margin-top:10%;border-radius:30px;")
+                    
+                    h3.light.center Airchat
+                    h5.light.center Login User
 
-                                  .input-field.col.s12
-                                      label(for="password") Password
-                                      input#password(type="password", name="password")
+                    .container
+                        .row
+                            form.col.s12(action="/api/user/create", method="post")
+                                .container
+                                .row
+                                    .col.s12
+                                        
+                                        .input-field.col.s12
+                                            label(for="username") Username
+                                            input#username(type="text", name="username")
 
-                                  .right
-                                      a(href="#") Forgot Password?                                  
+                                        .input-field.col.s12
+                                            label(for="password") Password
+                                            input#password(type="password", name="password")
 
-                              .col.s12.center(style="margin-top:10%")
-                                  button.btn.waves-effect.waves-light.bg-secondary.curvy(type='submit', name='action') Submit
+                                        .right
+                                            a(href="#") Forgot Password?                                  
+
+                                .col.s12.center(style="margin-top:10%")
+                                    button.btn.waves-effect.waves-light.bg-secondary.curvy(type='submit', name='action') Submit
 
