--- a/views/app/user/index.pug
+++ b/views/app/user/index.pug
@@ -1,12 +1,26 @@
-html(lang="en")
-    head
-        meta(charset="UTF-8")
-        meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Users
-    body
-        ul
-            each user in users
-                li 
-                    a(href="/api/user/"+user._id) #{user.name} - #{user.position} - #{user.organization.name}
-                    
+extend ../components/layout.pug
+
+block styles
+    link(href='https://fonts.googleapis.com/css?family=Quicksand', rel='stylesheet')
+    link(rel="stylesheet", href="/css/organization.css")
+
+block title
+    title Login User | AirChat
+
+block content
+
+	
+    .row.center
+        .col.l6.m6.center.hide-on-small-only
+            img(src="/images/crowd.png", alt="", width="500", style="margin-top:20%")
+
+        .col.s12.l6.m6
+            .container
+                .card-panel.z-depth-4(style="margin-top:10%;border-radius:30px;")
+       
+                    ul
+                        each user in users
+                            li 
+                                a(href="/api/user/"+user._id) #{user.name} 
+                                //- - #{user.position} - #{user.organization.name}
+                                
