user profile page

--- a/views/app/user/profile.pug
+++ b/views/app/user/profile.pug
@@ -39,8 +39,8 @@ block content
             .col.s3.center
                 img.responsive-img.circle.materialboxed(src="/images/face.png", alt="")
             .col.s8
-                .left
-                    h3.strong.valign-wrapper Charles Merwin    
+                .center
+                    h3.strong Charles Merwin    
                     h5.center
                         | @charlesmerwin
                     p
@@ -53,5 +53,6 @@ block content
                             i.material-icons.small.color-primary call
                         .col.s4.center
                                 i.material-icons.small.color-primary message
+            .col.s1    
                 .right
                     i.material-icons.color-primary edit
